--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node ./dist/server.js",
-    "dev": "nodemon ./src/server.ts",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon ./src/index.ts",
     "build": "tsc -p ."
   },
   "keywords": [],
