--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
     "start": "node ./dist/index.js",
     "dev": "nodemon ./src/index.ts",
@@ -19,9 +16,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/uuid": "^8.3.4",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.6.3"
+    "@types/uuid": "^8.3.4"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -31,6 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   }
 }
