--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "dev": "nodemon ./src/index.ts",
-    "build": "tsc -p ."
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
